# spd_lab

./: .gitignore
lab1/: 100_Independent0290  CMakeLists.txt  README.md  benchmark.py  benchmark_results12.csv  benchmark_results5.csv  benchmark_results7.csv  benchmark_results9.csv  gen.py  main.cpp  przyklad.txt  results.csv
lab1/inc/: CarlierSolver.hpp  ConstructionSolver.hpp  EDDsolver.hpp  ERDsolver.hpp  LookThroughSolver.hpp  LookthroughSolver.hpp  PreemptSchrageSolver.hpp  SchrageSolver.hpp  permutation.hpp  problem.hpp  solution.hpp  solver.hpp  task.hpp
lab1/src/: CarlierSolver.cpp  ConstructionSolver.cpp  EDDsolver.cpp  ERDsolver.cpp  LookThroughSolver.cpp  LookthroughSolver.cpp  PreemptSchrageSolver.cpp  SchrageSolver.cpp  Schragesolver.cpp  problem.cpp  solution.cpp
lab1/test_data12/: task_1.txt  task_10.txt  task_11.txt  task_12.txt  task_13.txt  task_14.txt  task_15.txt  task_16.txt  task_17.txt  task_18.txt  task_19.txt  task_2.txt  task_20.txt  task_21.txt  task_22.txt  task_23.txt  task_24.txt  task_25.txt  task_26.txt  task_27.txt  task_28.txt  task_29.txt  task_3.txt  task_30.txt  task_31.txt  task_32.txt  task_33.txt  task_34.txt  task_35.txt  task_36.txt  task_37.txt  task_38.txt  task_39.txt  task_4.txt  task_40.txt  task_41.txt  task_42.txt  task_43.txt  task_44.txt  task_45.txt  (+10 more)
lab1/test_data5/: task_1.txt  task_10.txt  task_11.txt  task_12.txt  task_13.txt  task_14.txt  task_15.txt  task_16.txt  task_17.txt  task_18.txt  task_19.txt  task_2.txt  task_20.txt  task_21.txt  task_22.txt  task_23.txt  task_24.txt  task_25.txt  task_26.txt  task_27.txt  task_28.txt  task_29.txt  task_3.txt  task_30.txt  task_31.txt  task_32.txt  task_33.txt  task_34.txt  task_35.txt  task_36.txt  task_37.txt  task_38.txt  task_39.txt  task_4.txt  task_40.txt  task_41.txt  task_42.txt  task_43.txt  task_44.txt  task_45.txt  (+10 more)
lab1/test_data50/: task_1.txt  task_10.txt  task_11.txt  task_12.txt  task_13.txt  task_14.txt  task_15.txt  task_16.txt  task_17.txt  task_18.txt  task_19.txt  task_2.txt  task_20.txt  task_21.txt  task_22.txt  task_23.txt  task_24.txt  task_25.txt  task_26.txt  task_27.txt  task_28.txt  task_29.txt  task_3.txt  task_30.txt  task_31.txt  task_32.txt  task_33.txt  task_34.txt  task_35.txt  task_36.txt  task_37.txt  task_38.txt  task_39.txt  task_4.txt  task_40.txt  task_41.txt  task_42.txt  task_43.txt  task_44.txt  task_45.txt  (+10 more)
lab1/test_data7/: task_1.txt  task_10.txt  task_11.txt  task_12.txt  task_13.txt  task_14.txt  task_15.txt  task_16.txt  task_17.txt  task_18.txt  task_19.txt  task_2.txt  task_20.txt  task_21.txt  task_22.txt  task_23.txt  task_24.txt  task_25.txt  task_26.txt  task_27.txt  task_28.txt  task_29.txt  task_3.txt  task_30.txt  task_31.txt  task_32.txt  task_33.txt  task_34.txt  task_35.txt  task_36.txt  task_37.txt  task_38.txt  task_39.txt  task_4.txt  task_40.txt  task_41.txt  task_42.txt  task_43.txt  task_44.txt  task_45.txt  (+10 more)
lab1/test_data9/: task_1.txt  task_10.txt  task_11.txt  task_12.txt  task_13.txt  task_14.txt  task_15.txt  task_16.txt  task_17.txt  task_18.txt  task_19.txt  task_2.txt  task_20.txt  (+37 more)
lab2/: 2machines_example100.txt  2machines_example11.txt  CMakeLists.txt  README.md  benchmark.py  main.cpp
lab3/: CMakeLists.txt  README.md  benchmark.py  benchmark_results_cmax_2_machines.csv  benchmark_results_cmax_2_machines_sprawko.csv  benchmark_results_cmax_2_machines_sprawko_PTAS.csv  benchmark_results_cmax_2_machines_sprawko_bezLT.csv  generate_benchmarks.py  main.cpp
(+216 files in other folders)
